# downloader-yt

./: .gitignore  README.md  build_exe.ps1  downloader_youtube.py  pyproject.toml
tests/: test_utils.py
