[project]
name = "downloader-youtube"
version = "1.0.0"
description = "Downloader de videos e audios do YouTube com interface CLI e GUI"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest>=7.0",
    "ruff",
]

[project.scripts]
yt-downloader = "downloader_youtube:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
